--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ruff = "^0.1.11"
 pre-commit = "^3.6.0"
 black = "^23.12.1"
 pytest = "^7.4.4"
+sphinx = "^7.2.6"
 
 [tool.black]
 line-length = 99
