--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ packages = [{include = "bug_buddy", from = "src/python"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+attrs = "^23.2.0"
+pydantic = "^2.5.3"
+pandas = "^2.1.4"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.11"
